Vega upload version
- added a reference for structuring future movement logic

--- a/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
+++ b/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\GameEngine.cs" />
+    <Compile Include="Classes\Map.cs" />
     <Compile Include="Classes\Tile Subclasses\Character Subclasses\Enemy.cs" />
     <Compile Include="Classes\Tile Subclasses\Character Subclasses\Enemy Subclasses\Goblin.cs" />
     <Compile Include="Classes\Tile Subclasses\Character Subclasses\Hero.cs" />
