--- a/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
+++ b/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
@@ -53,17 +53,17 @@
     <Compile Include="Classes\Tile Subclasses\Character Subclasses\Hero.cs" />
     <Compile Include="Classes\Tile Subclasses\Character.cs" />
     <Compile Include="Classes\Tile Subclasses\EmptyTile.cs" />
-    <Compile Include="GameForm.cs">
+    <Compile Include="Classes\Presentation\GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GameForm.Designer.cs">
+    <Compile Include="Classes\Presentation\GameForm.Designer.cs">
       <DependentUpon>GameForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Tile Subclasses\Obstacle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Tile.cs" />
-    <EmbeddedResource Include="GameForm.resx">
+    <EmbeddedResource Include="Classes\Presentation\GameForm.resx">
       <DependentUpon>GameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
