--- a/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
+++ b/RougeLike-Task1/RougeLike-Task1/RougeLike-Task1.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\GameEngine.cs" />
+    <Compile Include="Classes\Presentation\Help.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Presentation\Help.Designer.cs">
+      <DependentUpon>Help.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Map.cs" />
     <Compile Include="Classes\Tiles\Characters\Enemies\Mage.cs" />
     <Compile Include="Classes\Tiles\Characters\Enemy.cs" />
@@ -54,12 +60,6 @@
     <Compile Include="Classes\Tiles\Characters\Hero.cs" />
     <Compile Include="Classes\Tiles\Character.cs" />
     <Compile Include="Classes\Tiles\EmptyTile.cs" />
-    <Compile Include="Classes\Presentation\GameForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Classes\Presentation\GameForm.Designer.cs">
-      <DependentUpon>GameForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Classes\Tiles\Item.cs" />
     <Compile Include="Classes\Tiles\Items\Gold.cs" />
     <Compile Include="Classes\Tiles\Obstacle.cs" />
@@ -72,9 +72,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Tile.cs" />
-    <EmbeddedResource Include="Classes\Presentation\GameForm.resx">
-      <DependentUpon>GameForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Classes\Presentation\Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
     </EmbeddedResource>
