--- a/RougeLike-Task1/RougeLike-Task1/RogueLike.csproj
+++ b/RougeLike-Task1/RougeLike-Task1/RogueLike.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\GameEngine.cs" />
+    <Compile Include="Classes\Presentation\DeathScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Presentation\DeathScreen.Designer.cs">
+      <DependentUpon>DeathScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Presentation\Help.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,12 @@
       <DependentUpon>Help.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Map.cs" />
+    <Compile Include="Classes\Presentation\WinScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\Presentation\WinScreen.Designer.cs">
+      <DependentUpon>WinScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Tiles\Characters\Enemies\Leader.cs" />
     <Compile Include="Classes\Tiles\Characters\Enemies\Mage.cs" />
     <Compile Include="Classes\Tiles\Characters\Enemy.cs" />
@@ -77,11 +89,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Tile.cs" />
+    <EmbeddedResource Include="Classes\Presentation\DeathScreen.resx">
+      <DependentUpon>DeathScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\Presentation\Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\Presentation\Help.resx">
       <DependentUpon>Help.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\Presentation\WinScreen.resx">
+      <DependentUpon>WinScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
