--- a/RougeLike-Task1/RougeLike-Task1/RogueLike.csproj
+++ b/RougeLike-Task1/RougeLike-Task1/RogueLike.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{00001876-EA84-49DC-A535-ADA986A875F1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>RougeLike_Task1</RootNamespace>
-    <AssemblyName>RougeLike-Task1</AssemblyName>
+    <RootNamespace>RougeLike</RootNamespace>
+    <AssemblyName>RougeLike</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
